Fix tasks not showing up on page

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -88,3 +88,9 @@
     width: 100%;
   }
 }
+
+@media (max-width: 1200px) {
+  .todos__single {
+    width: 40%;
+  }
+}
